2003-05-02  Kjartan Maraas  <kmaraas@gnome.org>

	* schemas/Makefile.am: Support --disable-schemas-install
	Fixes bug #106124. Patch from Julio Merino.

2003-04-30  Kjartan Maraas  <kmaraas@gnome.org>

	* configure.in: Merge fix for bug #104907 from HEAD.

2003-03-21  Guntupalli Karunakar  <karunakar@freedomink.org>

	* configure.in: Added "ml" to ALL_LINGUAS

2003-03-10  Roozbeh Pournader  <roozbeh@sharif.edu>

	* configure.in: Added "fa" to ALL_LINGUAS.

2003-03-04  Frederic Crozat  <fcrozat@mandrakesoft.com>

	* capplets/network/gnome-network-preferences.c:
	(proxy_mode_radiobutton_clicked_cb):
	Set "system/proxy/use_http_proxy" GConf key when Manual or
	Auto is selected.

2003-02-22  Laurent Dhima  <laurenti@alblinux.net>

	* configure.in: Added 'sq' to ALL_LINGUAS
	
Thu Feb 13 18:51:37 2003  Jonathan Blandford  <jrb@redhat.com>

	* capplets/common/gconf-property-editor.c: (gconf_peditor_new):
	* capplets/common/gnome-theme-info.c: (read_meta_theme),
	(update_theme_index), (update_common_theme_dir_index),
	(top_theme_dir_changed), (top_icon_theme_dir_changed),
	(add_common_theme_dir_monitor), (real_add_top_theme_dir_monitor):
	* capplets/default-applications/gnome-default-applications-properti
	es.c: (initialize_default_applications), (read_editor),
	(read_terminal):
	* capplets/file-types/mime-edit-dialog.c: (fill_dialog):
	* capplets/file-types/mime-type-info.c: (load_all_mime_types):
	* capplets/file-types/mime-types-model.c:
	(mime_types_model_get_value):
	* capplets/font/main.c: (font_render_get_gconf), (enum_group_load):
	* capplets/mouse/gnome-mouse-properties.c: (read_cursor_font),
	(cursor_changed):
	* capplets/theme-switcher/gnome-theme-details.c:
	(window_theme_selection_changed):
	* capplets/theme-switcher/gnome-theme-manager.c:
	(meta_theme_selection_changed):
	* capplets/theme-switcher/theme-thumbnail.c:
	(generate_theme_thumbnail):
	* libsounds/sound-properties.c: (sound_properties_add_directory),
	(sound_properties_add_file):